styles.css
body {
  background-color: rgb(161, 205, 212);
}

h1 {
  font-family: arial;
  font-size: 35px;
  color: black;
  max-width: 200px;
  margin: auto;
}
#container {
  max-width: 800px;
  margin: 0 auto;
  display: grid;
  grid-template-columns: 200px 200px 200px 200px;
}

@media only screen and (max-width: 800px) {
  #container {
    max-width: 600px;
    margin: 0 auto;
    display: grid;
    grid-template-columns: 200px 200px 200px;
  }
}

@media only screen and (max-width: 600px) {
  #container {
    max-width: 380px;
    margin: 0 auto;
    display: grid;
    grid-template-columns: 180px 180px;
  }
}

.displayBook {
  background-color: white;
  border: 5px solid black;
  height: 175px;
  width: 140px;
  margin: 0 auto;
  margin-top: 20px;
  padding: 10px;
  text-align: center;
}

#addBook {
  margin-top: 50px;
  font-size: 20px;
  margin-left: 45%;
}

.removeButton {
  padding: 5px;
  margin-top: 10px;
}

.readToggle {
  padding: 5px;
  margin-top: 10px;
}

form {
  max-width: 275px;
  margin: 0 auto;
  margin-top: 20px;
  text-align: right;
  border: 5px solid black;
  background-color: rgb(212, 206, 206);
  padding: 5px;
}

.bookName {
  font-weight: bold;
  font-size: large;
}

